--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <a href="https://www.facebook.com/" target="_blank"></a>
         </div>
         <div class="inst">
-            <a href="https://www.instagram.com/"target="_blank"></a>
+            <a href="https://www.instagram.com" target="_blank"></a>
         </div>
 
     </div>    
